# toolkit

./: .gitignore  README.md
desktool-app/: index.html  overview.md  (+3 more)
desktool-app/src-tauri/: Cargo.toml  tauri.conf.json
desktool-app/src-tauri/capabilities/: default.json
desktool-app/src-tauri/icons/: icon.icns
desktool-app/src-tauri/src/: cc_agent.rs  https_proxy.rs  lib.rs  main.rs  proxy.rs  switchhosts.rs
desktool-app/src-tauri/src/cc_agent/: bridge_commands.rs  cache.rs  changelog.rs  codex.rs  dependency.rs  dependency_sdk.rs  file_ops.rs  git.rs  history.rs  model.rs  prompt.rs  rewind.rs  terminal.rs  types.rs  usage.rs  watcher.rs
desktool-app/src-tauri/src/cc_agent/action/: dispatcher.rs  middleware.rs  mod.rs  pipeline.rs  types.rs
desktool-app/src-tauri/src/cc_agent/bridge/: deploy.rs  env_config.rs  health.rs  mcp.rs  mod.rs  node_detector.rs  protocol.rs  streaming.rs
desktool-app/src-tauri/src/cc_agent/handler/: context.rs  core.rs  diff.rs  file.rs  history.rs  mod.rs
desktool-app/src-tauri/src/cc_agent/network/: logger.rs  mod.rs  types.rs
desktool-app/src-tauri/src/cc_agent/permission/: decision_store.rs  manager.rs  mod.rs  registry.rs  request.rs  service.rs
desktool-app/src-tauri/src/cc_agent/provider/: claude.rs  codex.rs  common.rs  mcp.rs  mod.rs  model_provider.rs
desktool-app/src-tauri/src/cc_agent/session/: context.rs  dedup.rs  lifecycle.rs  mod.rs  permissions.rs  streaming.rs
desktool-app/src-tauri/src/cc_agent/settings/: appearance.rs  global.rs  mod.rs  notification.rs  permission.rs  project.rs  provider.rs
(+586 files in other folders)
