[package]
name = "desktool-app"
version = "0.1.0"
description = "艦口工具箱 Toolkit - 开发者桌面工具集"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktool_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
urlencoding = "2"
futures-util = "0.3"
regex = "1"
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
time = "0.3"
dirs = "5"
which = "6"
async-trait = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Networking_WinInet", "Win32_System_Registry"] }

